
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fbuf ;
typedef int addr ;
typedef int __u64 ;
typedef int FILE ;


 int TIMER_LIST_FOPS ;
 int __fatal_errno (char*) ;
 scalar_t__ fgets (char*,int,int *) ;
 int * fopen (char*,char*) ;
 int memset (char*,int,int) ;
 int strcmp (char*,int ) ;
 int strlen (char*) ;
 int strtoul (char*,int *,int) ;

__attribute__((used)) static __u64 get_fops_addr()
{
  FILE* stream;
  char fbuf[256];
  char addr[32];

  stream = fopen("/proc/kallsyms", "r");
  if(stream < 0)
    __fatal_errno("open: kallsyms");

  memset(fbuf, 0x00, sizeof(fbuf));
  while(fgets(fbuf, 256, stream) > 0)
  {
    char *p = fbuf;
    char *a = addr;
    memset(addr, 0x00, sizeof(addr));
    fbuf[strlen(fbuf)-1] = 0;
    while(*p != ' ')
      *a++ = *p++;
    p += 3;
    if(!strcmp(p, TIMER_LIST_FOPS))
      return strtoul(addr, ((void*)0), 16);
  }

  return 0;
}
